--- a/3rdparty/Pangolin/CMakeLists.txt
+++ b/3rdparty/Pangolin/CMakeLists.txt
@@ -105,4 +105,6 @@ endif()
 if(BUILD_EXAMPLES)
     add_subdirectory(examples)
 endif()
+
 set(Pangolin_DIRS ${Pangolin_BINARY_DIR}/src)
+set(Pangolin_INCDIRS ${Pangolin_BINARY_DIR}/src/include)
